--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1504,3 +1504,117 @@ footer .credits {
 footer .credits a {
   color: #fff;
 }
+
+
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
+:root {
+	--facebook-color: #3b5999;
+	--instagram-color: #e1306c;
+	--youtube-color: #de463b;
+	--tiktok-color: #46c1f6;
+	--github-color: #333;
+}
+
+
+.wrapperr {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  flex-wrap: wrap;
+}
+@media (max-width:768px) { 
+  .wrapperr {
+    margin-top: 100px;
+  }
+}
+.icon {
+	margin: 0 20px;
+	cursor: pointer;
+	position: relative;
+  margin-top: 100px;
+}
+
+.icon i {
+	height: 60px;
+	width: 60px;
+	border-radius: 50%;
+	background: #fff;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+	font-size: 25px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.icon .tooltip {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	color: #fff;
+	padding: 10px 18px;
+	font-size: 20px;
+	font-weight: 500;
+	border-radius: 25px;
+	opacity: 0;
+	pointer-events: none;
+	box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
+}
+/* 
+.icon .tooltip:before {
+	position: absolute;
+	content: '';
+	height: 15px;
+	width: 15px;
+	left: 50%;
+	bottom: -6px;
+	transform: translateX(-50%) rotate(45deg);
+} */
+
+.tooltip,
+.icon i {
+	transition: 0.3s;
+}
+
+.icon:hover .tooltip {
+	opacity: 1;
+	pointer-events: auto;
+	top: -70px;
+}
+
+.icon:hover i {
+	color: white;
+}
+
+.facebook .tooltip:before,
+.facebook:hover i,
+.facebook .tooltip {
+	background: var(--facebook-color);
+}
+.github .tooltip:before,
+.github:hover i,
+.github .tooltip {
+	background: var(--github-color);
+}
+.tiktok .tooltip:before,
+.tiktok:hover i,
+.tiktok .tooltip {
+	background: var(--github-color);
+}
+.instagram .tooltip:before
+{
+  background-color: #fff;
+}
+.instagram .tooltip {
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+}
+.instagram:hover .fa-instagram {
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+}
+
+.youtube .tooltip:before,
+.youtube:hover i,
+.youtube .tooltip {
+	background: var(--youtube-color);
+}
